[build-system]
requires = ["setuptools>=66.0"]
build-backend = "setuptools.build_meta"

[tool.setuptools]
include-package-data = true

[tool.setuptools.packages.find]
where = ["src"]

[tool.setuptools.dynamic]
version = { attr = "mathematical_algorithms_of_geometry_in_cryptography.__version__" }

[project]
name = "mathematical_algorithms_of_geometry_in_cryptography"
dynamic = ["version"]
description = "laboratories for mathematical algorithms of geometry in cryptography"
readme = "README.md"
requires-python = ">=3.12"
authors = [
    { name = "Danil Kovalev", email = "dan.kovalev2013@gmail.com" },
]
classifiers = [
    "Programming Language :: Python :: 3.12",
    "Programming Language :: Python :: 3.13",
    "License :: OSI Approved :: MIT License",
    "Operating System :: OS Independent",
    "Typing :: Typed",
]
dependencies = [
    "bazario==0.4.2",
    "click==8.3.1",
    "dishka==1.7.1",
    "prettytable==3.17.0",
    "pydantic==2.12.5",
    "structlog==25.4.0",
    "sympy==1.13.3",
]

[project.optional-dependencies]
test = [
    "coverage[toml]==7.10.7",
    "pytest==8.4.2",
]
lint = [
    "ruff==0.14.0",
    "bandit==1.8.6",
    "codespell==2.4.1",
    "mypy==1.18.2",
    "basedpyright==1.29.2",
]
dev = [
    "mathematical_algorithms_of_geometry_in_cryptography[test,lint]",
    "pre-commit==4.3.0",
]

[project.urls]
Homepage = "https://github.com/C3EQUALZz/DSTU_VKB"
Documentation = "https://github.com/C3EQUALZz/DSTU_VKB/README.md"
Repository = "https://github.com/C3EQUALZz/DSTU_VKB"
Issues = "https://github.com/C3EQUALZz/DSTU_VKB/issues"

[tool.pytest.ini_options]
xfail_strict = true
testpaths = ["tests"]
asyncio_mode = "auto"
asyncio_default_fixture_loop_scope = "session"
markers = ["value_objects"]

[tool.basedpyright]
include = ["src", "tests"]
ignore = ["**/__pycache__", "**/alembic"]
pythonVersion = "3.12"
reportAny = false
reportUnusedCallResult = false

[tool.mypy]
mypy_path = "src"
plugins = "pydantic.mypy"
files = ["src"]
exclude = ["src/mathematical_algorithms_of_geometry_in_cryptography/setup/config/"]
python_version = "3.12"

strict = true
pretty = true
warn_return_any = true
warn_unreachable = true
warn_unused_ignores = true
warn_redundant_casts = true
allow_redefinition = true
allow_untyped_calls = true
disallow_any_explicit = false
disallow_any_generics = false
disallow_subclassing_any = false
disallow_untyped_decorators = false
show_error_codes = true
show_error_context = true
show_column_numbers = true
check_untyped_defs = true
namespace_packages = true
ignore_missing_imports = true

[tool.ruff]
src = ["src"]
include = ["src/**.py", "tests/**.py"]
exclude = ["src/mathematical_algorithms_of_geometry_in_cryptography/setup/config/**.py"]
target-version = "py312"
line-length = 120
fix = true

[tool.ruff.lint]
select = ["ALL"]
ignore = ["D", "CPY001", "A005", "TRY003", "COM812", "FBT001", "FBT003", "PLR0913"]

[tool.ruff.format]
docstring-code-format = true

[tool.ruff.lint.isort]
known-first-party = ["src", "tests"]
no-lines-before = ["local-folder"]


[tool.coverage.run]
parallel = true
branch = true
concurrency = ["thread", "multiprocessing"]
source = ["src", "tests"]
omit = ["**/__init__.py"]

[tool.coverage.report]
show_missing = true
skip_empty = true
exclude_also = [
    'if TYPE_CHECKING:',
    "if __name__ == .__main__.:",
    '@(abc\.)?abstractmethod',
    "raise NotImplementedError",
    "pass",
    '\.\.\.',
]
omit = [
    'src/mathematical_algorithms_of_geometry_in_cryptography/infrastructure/persistence/adapters/*.py',
    'src/mathematical_algorithms_of_geometry_in_cryptography/infrastructure/persistence/alembic/env.py',
    '*/__init__.py',
]

[tool.semgrep]
paths = ["src"]
include = ["src"]

[tool.bandit]
targets = "src"

[tool.codespell]
skip = "*.pyi,*.pyc,./site"
