[build-system]
requires = ["setuptools>=66.0"]
build-backend = "setuptools.build_meta"

[tool.setuptools]
include-package-data = true

[tool.setuptools.packages.find]
where = ["src"]

[tool.setuptools.dynamic]
version = { attr = "compressor.__version__" }

[project]
name = "compressor"
dynamic = ["version"]
description = "Course for work for theory_of_encoding_compression_and_information_recovery"
readme = "README.md"
authors = [
    { name = "Danil Kovalev", email = "dan.kovalev2013@gmail.com" },
]
classifiers = [
    "Programming Language :: Python :: 3.11",
    "Programming Language :: Python :: 3.12",
    "Programming Language :: Python :: 3.13",
    "License :: OSI Approved :: MIT License",
    "Operating System :: OS Independent",
    "Typing :: Typed",
]
requires-python = ">=3.11"
dependencies = [
    "aiogram>=3.22.0",
    "aiogram-dialog>=2.4.0",
    "aiogram-i18n>=1.4",
    "asyncpg>=0.30.0",
    "bazario>=0.4.2",
    "bcrypt>=4.3.0",
    "click>=8.1.8",
    "dishka>=1.6.0",
    "fluent-runtime>=0.4.0",
    "sqlalchemy>=2.0.43",
    "structlog>=25.4.0",
    "taskiq>=0.11.18",
    "taskiq-aio-pika>=0.4.3",
    "taskiq-redis>=1.1.0",
]

[project.optional-dependencies]
test = [
    "coverage[toml]==7.8.2",
    "pytest==8.4.0",
    "pytest-asyncio==0.26.0",
    "httpx==0.28.1",
    "testcontainers>=4.10.0"
]
lint = [
    "ruff==0.11.13",
    "bandit==1.8.3",
    "codespell==2.4.1",
    "mypy==1.16.0",
    "basedpyright==1.29.2",
    # semgrep depends on opentelemetry-exporter-otlp>=v1.25,<1.33.0
    "semgrep==1.124.0",
    "opentelemetry-exporter-otlp>=1.25.0,<1.35.0",
]
dev = [
    "compressor[test,lint]",
    "pre-commit==4.2.0",
    "detect-secrets==1.5.0",
    "python-dotenv>=1.1.0"
]

[tool.pytest.ini_options]
xfail_strict = true
testpaths = ["tests"]
asyncio_mode = "auto"
asyncio_default_fixture_loop_scope = "session"
markers = ["value_objects"]

[tool.basedpyright]
include = ["src", "tests"]
ignore = ["**/__pycache__", "**/alembic"]
pythonVersion = "3.11"
reportAny = false
reportUnusedCallResult = false

[tool.mypy]
mypy_path = "src"
files = ["src"]
exclude = ["src/compressor/setup/config/"]
python_version = "3.11"

strict = true
pretty = true
warn_return_any = true
warn_unreachable = true
warn_unused_ignores = true
warn_redundant_casts = true
allow_redefinition = true
allow_untyped_calls = true
disallow_any_explicit = false
disallow_any_generics = false
disallow_subclassing_any = false
disallow_untyped_decorators = false
show_error_codes = true
show_error_context = true
show_column_numbers = true
check_untyped_defs = true
namespace_packages = true
ignore_missing_imports = true

[tool.ruff]
src = ["src"]
include = ["src/**.py", "tests/**.py"]
exclude = ["src/compressor/setup/config/**.py"]
target-version = "py311"
line-length = 120
fix = true

[tool.ruff.lint]
select = ["ALL"]
ignore = ["D", "CPY001", "A005", "TRY003", "COM812"]

[tool.ruff.lint.per-file-ignores]
"src/compressor/infrastructure/persistence/alembic/**" = ["ERA001", "INP001"]
"tests/**" = ["S101"]

[tool.ruff.format]
docstring-code-format = true

[tool.ruff.lint.isort]
known-first-party = ["src", "tests"]
no-lines-before = ["local-folder"]

[tool.coverage.run]
parallel = true
branch = true
concurrency = ["thread", "multiprocessing"]
source = ["src", "tests"]
omit = ["**/__init__.py"]

[tool.coverage.report]
show_missing = true
skip_empty = true
exclude_also = [
    'if TYPE_CHECKING:',
    "if __name__ == .__main__.:",
    '@(abc\.)?abstractmethod',
    "raise NotImplementedError",
    "pass",
    '\.\.\.',
]
omit = [
    'src/compressor/infrastructure/persistence/adapters/*.py',
    'src/compressor/infrastructure/persistence/alembic/env.py',
    '*/__init__.py',
]

[tool.semgrep]
paths = ["src"]
include = ["src"]

[tool.bandit]
targets = "src"

[tool.codespell]
skip = "*.pyi,*.pyc,./site"
