[package]
name = "lab_02_secret_sharing"
version.workspace = true
edition.workspace = true
authors.workspace = true
license.workspace = true
rust-version.workspace = true
description = "Лаб 2: пороговые схемы разделения секрета Шамира и Блэкли."

[dependencies]
shared = { workspace = true }
tracing = { workspace = true }
color-eyre = { workspace = true }
thiserror = { workspace = true }
clap = { workspace = true }

[dev-dependencies]
proptest = { workspace = true }

[lints]
workspace = true
