[package]
name = "lab_04_vigenere"
version.workspace = true
edition.workspace = true
authors.workspace = true
license.workspace = true
rust-version.workspace = true
description = "Лаб 4: шифр Виженера + криптоанализ через индекс совпадения и взаимный индекс."

[dependencies]
shared = { workspace = true }
tracing = { workspace = true }
color-eyre = { workspace = true }
thiserror = { workspace = true }
clap = { workspace = true }

[dev-dependencies]
proptest = { workspace = true }

[lints]
workspace = true
