[package]
name = "lab_05_xor"
version.workspace = true
edition.workspace = true
authors.workspace = true
license.workspace = true
rust-version.workspace = true
description = "Лаб 5: симметричное XOR-шифрование текста с побайтовым ключом."

[dependencies]
shared = { workspace = true }
tracing = { workspace = true }
color-eyre = { workspace = true }
thiserror = { workspace = true }
clap = { workspace = true }

[dev-dependencies]
proptest = { workspace = true }

[lints]
workspace = true
