[package]
name = "lab_06_crt_sharing"
version.workspace = true
edition.workspace = true
authors.workspace = true
license.workspace = true
rust-version.workspace = true

[dependencies]
shared = { workspace = true }
tracing = { workspace = true }
color-eyre = { workspace = true }
clap = { workspace = true }

[lints]
workspace = true
