[package]
name = "lab_06_crt_sharing"
version.workspace = true
edition.workspace = true
authors.workspace = true
license.workspace = true
rust-version.workspace = true
description = "Лаб 6: пороговые схемы разделения секрета на основе СОК — Миньотта и Асмут-Блум."

[dependencies]
shared = { workspace = true }
tracing = { workspace = true }
color-eyre = { workspace = true }
thiserror = { workspace = true }
clap = { workspace = true }
num-bigint = { workspace = true }
num-integer = { workspace = true }
num-traits = { workspace = true }
rand = { workspace = true }
rand_chacha = { workspace = true }

[dev-dependencies]
proptest = { workspace = true }

[lints]
workspace = true
