[tool.poetry]
name = "backend-temporary-app"
version = "0.1.0"
description = "Backend written with FastAPI for seventh laboratory"
authors = ["matebookWindows <dan.kovalev2013@gmail.com>"]
license = "MIT"
readme = "README.md"

[tool.poetry.dependencies]
python = "^3.11"


[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
