[tool.poetry]
name = "backend-pacman-app"
version = "0.1.0"
description = "Backend written with FastAPI for pacman game"
authors = ["c3equalz"]
license = "MIT"
readme = "README.md"

[tool.poetry.dependencies]
python = "^3.11"
fastapi = "^0.115.6"
pyjwt = {extras = ["crypto"], version = "^2.10.1"}
pydantic-settings = "^2.7.0"
bcrypt = "^4.2.1"
motor = "^3.6.0"


[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
