[project]
name = "auth-service"
version = "0.1.0"
description = "Microservice for authencation for users"
authors = [
    {name = "matebookWindows",email = "dan.kovalev2013@gmail.com"}
]
license = {text = "MIT"}
readme = "README.md"
requires-python = ">=3.12"
dependencies = [
    "dishka (>=1.5.3,<2.0.0)",
    "authx (>=1.4.2,<2.0.0)",
    "fastapi (>=0.115.12,<0.116.0)",
    "redis (>=6.0.0,<7.0.0)",
    "pydantic (>=2.11.4,<3.0.0)",
    "sqlalchemy (>=2.0.40,<3.0.0)",
    "asyncpg (>=0.30.0,<0.31.0)",
    "bcrypt (>=4.3.0,<5.0.0)",
    "email-validator (>=2.2.0,<3.0.0)",
    "faststream (>=0.5.40,<0.6.0)",
    "pydantic-settings (>=2.9.1,<3.0.0)"
]


[build-system]
requires = ["poetry-core>=2.0.0,<3.0.0"]
build-backend = "poetry.core.masonry.api"
