[project]
name = "email-service"
version = "0.1.0"
description = "Microservice for sending emails"
authors = [
    {name = "matebookWindows",email = "dan.kovalev2013@gmail.com"}
]
license = {text = "MIT"}
readme = "README.md"
requires-python = ">=3.12,<4.0"
dependencies = [
    "fastapi-mail (>=1.4.2,<2.0.0)",
    "dishka (>=1.5.3,<2.0.0)",
    "email-validator (>=2.2.0,<3.0.0)",
    "redis (>=5,<6)",
    "faststream[kafka] (>=0.5.40,<0.6.0)",
    "taskiq (>=0.11.17,<0.12.0)",
    "taskiq-redis (>=1.0.8,<2.0.0)",
    "babel (>=2.17.0,<3.0.0)"
]


[build-system]
requires = ["poetry-core>=2.0.0,<3.0.0"]
build-backend = "poetry.core.masonry.api"
