[project]
name = "image-colorization-service"
version = "0.1.0"
description = "Microservice for colorization image"
authors = [
    {name = "matebookWindows",email = "dan.kovalev2013@gmail.com"}
]
license = {text = "MIT"}
readme = "README.md"
requires-python = ">=3.12,<4.0"
dependencies = [
    "taskiq (>=0.11.16,<0.12.0)",
    "numpy (>=1.26,<2.2)",
    "concurrent-log-handler (>=0.9.25,<0.10.0)",
    "tensorflow (==2.16.1)",
    "opencv-python-headless (>=4.11.0.86,<5.0.0.0)",
    "dishka (>=1.5.3,<2.0.0)",
    "pydantic-settings (>=2.9.1,<3.0.0)",
    "taskiq-redis (>=1.0.7,<2.0.0)",
    "faststream[kafka] (>=0.5.39,<0.6.0)",
    "uvicorn (>=0.34.2,<0.35.0)",
    "gunicorn (>=23.0.0,<24.0.0)",
    "fastapi (>=0.115.12,<0.116.0)",
    "python-multipart (>=0.0.20,<0.0.21)"
]


[build-system]
requires = ["poetry-core>=2.0.0,<3.0.0"]
build-backend = "poetry.core.masonry.api"
